Fix mobile schedule timeslot space and wrapping

--- a/app/assets/stylesheets/schedule-mobile.css.sass
+++ b/app/assets/stylesheets/schedule-mobile.css.sass
@@ -28,11 +28,13 @@
       .timeslot
         h2
           font-size: 1.4em !important
+          padding: 0.8em 0.5em
           display: flex
           align-items: baseline
+          gap: 0.5em
           .time
             flex: 0 0 auto
-            width: 6.3em
+            white-space: nowrap
           .title
             flex: 1
             margin-left: 0
